--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://phamquockhanh:phamquockhanh@ecommerce.oaturkp.mongodb.net/Ecommerce?appName=ecommerce
+EMAIL=khanhphamquocnb2@gmail.com
+EMAIL_PASS=oqssuqfmbsgjpsbl
+JSON_WEB_TOKEN_SECRET_KEY=verma9643
