--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ MONGODB_URI=mongodb+srv://phamquockhanh:phamquockhanh@ecommerce.oaturkp.mongodb.
 EMAIL=khanhphamquocnb2@gmail.com
 EMAIL_PASS=oqssuqfmbsgjpsbl
 JSON_WEB_TOKEN_SECRET_KEY=verma9643
+SECRET_KEY_ACCESS_TOKEN=hello1
+SECRET_KEY_REFRESH_TOKEN=hello2
