--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ EMAIL_PASS=oqssuqfmbsgjpsbl
 JSON_WEB_TOKEN_SECRET_KEY=verma9643
 SECRET_KEY_ACCESS_TOKEN=hello1
 SECRET_KEY_REFRESH_TOKEN=hello2
+cloudinary_Config_Cloud_Name=dnowkz78d
+cloudinary_Config_api_key=965534216445443
+cloudinary_Config_api_secret=W1UIXKc6uo7usttO8DrFTvLr38E
