--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,11 @@
     "@mui/material": "^7.3.4",
     "@tailwindcss/vite": "^4.1.14",
     "react": "^19.1.1",
+    "react-collapse": "^5.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-inner-image-zoom": "^4.0.1",
+    "react-range-slider-input": "^3.3.2",
     "react-router-dom": "^7.9.4",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.14"
