--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-collapse": "^5.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^4.0.1",
     "react-range-slider-input": "^3.3.2",
