--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.13.2",
     "react": "^19.1.1",
